--- a/Continuum/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Continuum/Views/Storyboards/Base.lproj/Main.storyboard
@@ -34,9 +34,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Find Posts" showsCancelButton="YES" id="8hz-dV-cRM">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="postCell" rowHeight="410" id="PNX-CU-0YE" customClass="PostTableViewCell" customModule="Continuum" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="410"/>
+                                <rect key="frame" x="0.0" y="72" width="414" height="410"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PNX-CU-0YE" id="wR6-IW-yZh">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="410"/>
@@ -88,6 +93,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Posts" id="GcF-Vn-rCf"/>
+                    <connections>
+                        <outlet property="postSearchBar" destination="8hz-dV-cRM" id="C3L-si-DO5"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Id-dn-tIW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -206,25 +214,18 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spaceEmptyState" translatesAutoresizingMaskIntoConstraints="NO" id="VtR-8i-Ou0">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
-                                                </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bji-xx-sVx">
+                                                <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="agN-Kx-k1T">
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
                                                     <connections>
-                                                        <action selector="selectedPhotoButtonTapped:" destination="sYg-7H-r2e" eventType="touchUpInside" id="A6A-XS-mPi"/>
+                                                        <segue destination="8IG-ez-MhA" kind="embed" identifier="toPhotoPicker" id="E39-iQ-KBd"/>
                                                     </connections>
-                                                </button>
+                                                </containerView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="VtR-8i-Ou0" firstAttribute="leading" secondItem="phX-VU-K6l" secondAttribute="leading" id="2Pf-6D-64F"/>
-                                                <constraint firstItem="bji-xx-sVx" firstAttribute="leading" secondItem="phX-VU-K6l" secondAttribute="leading" id="6fQ-z2-6YG"/>
-                                                <constraint firstAttribute="bottom" secondItem="bji-xx-sVx" secondAttribute="bottom" id="RBQ-7l-1RY"/>
-                                                <constraint firstAttribute="trailing" secondItem="VtR-8i-Ou0" secondAttribute="trailing" id="WdR-ko-IoU"/>
-                                                <constraint firstAttribute="trailing" secondItem="bji-xx-sVx" secondAttribute="trailing" id="ZFl-FG-YuZ"/>
-                                                <constraint firstItem="VtR-8i-Ou0" firstAttribute="top" secondItem="phX-VU-K6l" secondAttribute="top" id="awI-pz-hMG"/>
-                                                <constraint firstAttribute="bottom" secondItem="VtR-8i-Ou0" secondAttribute="bottom" id="oR8-Fp-fvg"/>
-                                                <constraint firstItem="bji-xx-sVx" firstAttribute="top" secondItem="phX-VU-K6l" secondAttribute="top" id="uaH-zY-6jW"/>
+                                                <constraint firstItem="agN-Kx-k1T" firstAttribute="leading" secondItem="phX-VU-K6l" secondAttribute="leading" id="9j9-un-5bZ"/>
+                                                <constraint firstAttribute="trailing" secondItem="agN-Kx-k1T" secondAttribute="trailing" id="I1Z-dW-Fdz"/>
+                                                <constraint firstAttribute="bottom" secondItem="agN-Kx-k1T" secondAttribute="bottom" id="aeB-2t-AmD"/>
+                                                <constraint firstItem="agN-Kx-k1T" firstAttribute="top" secondItem="phX-VU-K6l" secondAttribute="top" id="vBr-jO-AwG"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -342,6 +343,37 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MMJ-B8-u7B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="264" y="504"/>
+        </scene>
+        <!--Photo Selector View Controller-->
+        <scene sceneID="JIa-5A-gcK">
+            <objects>
+                <viewController id="8IG-ez-MhA" customClass="PhotoSelectorViewController" customModule="Continuum" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oTL-KA-4Zi">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="spaceEmptyState" translatesAutoresizingMaskIntoConstraints="NO" id="VtR-8i-Ou0">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bji-xx-sVx">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="photoSelectedButtonTapped:" destination="8IG-ez-MhA" eventType="touchUpInside" id="Sn7-BL-4xr"/>
+                                    <action selector="selectedPhotoButtonTapped:" destination="sYg-7H-r2e" eventType="touchUpInside" id="A6A-XS-mPi"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <outlet property="photoImageView" destination="VtR-8i-Ou0" id="Qqf-xD-fO6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tr6-MV-gDw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1912" y="504"/>
         </scene>
     </scenes>
     <resources>
