--- a/Continuum/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Continuum/Views/Storyboards/Base.lproj/Main.storyboard
@@ -206,7 +206,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <sections>
-                            <tableViewSection headerTitle="Section-1" id="SdE-2i-Pxk">
+                            <tableViewSection headerTitle="Add an Image" id="SdE-2i-Pxk">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="294" id="imp-yC-e3K">
                                         <rect key="frame" x="0.0" y="55.5" width="414" height="294"/>
@@ -232,7 +232,7 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection headerTitle="Section-2" id="MTu-jI-BCY">
+                            <tableViewSection headerTitle="Post Title" id="MTu-jI-BCY">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="WfX-xW-Upb">
                                         <rect key="frame" x="0.0" y="405.5" width="414" height="50"/>
@@ -257,10 +257,10 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection headerTitle="Section-3" id="CiV-fv-v1x">
+                            <tableViewSection id="CiV-fv-v1x">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="GfP-tM-LTj">
-                                        <rect key="frame" x="0.0" y="511.5" width="414" height="50"/>
+                                        <rect key="frame" x="0.0" y="491.5" width="414" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GfP-tM-LTj" id="Uvz-SA-Dla">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
